--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,33 +16,61 @@
     background-position: center;
 }
 .nav{
-    width: 100%;
     height: 70px;
     background-color: #212529;
     color: white;
     display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    text-align: right; 
     position: fixed;
-}
-.title{
-    width: 30%;
-    margin: auto;
+    width: 100%;
 }
 .logo{
-    margin-left: 30%;
-    font-size: 26px;
+    font-weight: bolder;
+    margin-left: 7%;
+    /* padding: 5px; */
 }
-.logo:hover{
+.logo a{
+    color: white;
+    text-decoration: none;
+    font-size: 28px;
+}
+.logo a:hover{
+    color:  #f13a11;
+}
+.toggle{
+    display: none;
+}
+.navigation {
+    display: inline-flex;
+    list-style: none;
+    margin-right: 8%;
+}
+.navigation li{
+    margin-left: 30px;
+}
+.navigation li a{
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+.navigation li a:hover{
+    color: #f13a11;
+}
+.icon{
+    margin-left: 5px;
+}
+/* .logo{
+}
+.logo a:hover{
     color:  #f13a11;
 }
 .navigation{
-    width: 70%;
-    padding-left: 15%;
     margin: auto;
     list-style: none;
-    display: flex;
 }
 .navigation li{
-    margin-left: 5%;
 }
 .navigation li a{
     text-decoration: none;
@@ -60,7 +88,7 @@
 }
 .navigation .icon a{
     font-size: 15px;
-}
+} */
 .header .desc{
     color: rgb(163, 161, 161);
     text-align: center;
@@ -398,25 +426,54 @@ th{
     .header{
         min-height: 400px;
     }
-    .title{
-        width: 40%;
+    .nav{
+        /* justify-content: space-around; */
     }
     .logo{
-        margin-left: 10px;
-        font-size: 16px;
+        margin-left: 30px;
+    }
+    .logo a{
+        font-size: 20px;
+    }
+    .toggle{
+        display: block;
     }
     .navigation{
-        width: 60%;
-        padding-left: 5%;
-        overflow: scroll;
+        display: none !important;
     }
-    .navigation li a{
+    .nav ul{
+        display: block;
+        position: absolute;
+        right: 0;
+        /* margin-right: 10px; */
+        margin-top: 265px;
+        padding: 20px 0;
+        list-style: none;
+        height: auto;
+        width: 100%;
+        text-align: left;
+        background-color: #171819;
+    }
+    nav ul li{
+        padding: 5px;
+        margin-left: 30px;
+    }
+    nav ul li:nth-child(5){
+        margin-bottom: 20px;
+    }
+    .icon{
+        margin-left: 30px;
+        display: inline;
+    }
+    .nav ul li a{
         text-decoration: none;
-        font-size: 10px;
+        font-size: 14px;
         color: white;
+        /* background-color: #2c2c2c; */
     }
     .header .desc{
         font-size: 16px;
+        padding-top: 100px;
     }
     .header> h1{
         font-size: 30px;
@@ -483,8 +540,9 @@ th{
         width: 90%;
         margin: 50px auto 0 auto;
     }
-    table{
-        overflow: scroll;
+    .sectiond{
+        display: none;
+
     }
     .containere{
         display: block;
